--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -11,4 +11,8 @@
     <string name="register">تسجيل</string>
     <string name="already_have_account">لديك حساب بالفعل؟</string>
     <string name="full_name">الإسم بالكامل</string>
+    <string name="about_creator">About Creator</string>
+    <string name="logout">Logout</string>
+    <string name="creator_name">Hossam Mohsen</string>
+    <string name="about_bio">Hossam Mohsen is a self-taught developer focused on software development in general. He is also specialized in back-end development and has worked on mobile and web apps. Hossam worked with many languages and platforms including: Android, Flutter, NodeJS, Java, Kotlin, and more.</string>
 </resources>
