feat(home): setup bottom nav and create fragments skeletons

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -15,4 +15,7 @@
     <string name="logout">Logout</string>
     <string name="creator_name">Hossam Mohsen</string>
     <string name="about_bio">Hossam Mohsen is a self-taught developer focused on software development in general. He is also specialized in back-end development and has worked on mobile and web apps. Hossam worked with many languages and platforms including: Android, Flutter, NodeJS, Java, Kotlin, and more.</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="favourites">Favourites</string>
 </resources>
