--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -18,4 +18,5 @@
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="favourites">Favourites</string>
+    <string name="recipe_details">Recipe Details</string>
 </resources>
