--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -11,12 +11,15 @@
     <string name="register">تسجيل</string>
     <string name="already_have_account">لديك حساب بالفعل؟</string>
     <string name="full_name">الإسم بالكامل</string>
-    <string name="about_creator">About Creator</string>
-    <string name="logout">Logout</string>
+    <string name="about_creator">عن منشئ التطبيق</string>
+    <string name="logout">تسجيل الخروج</string>
     <string name="creator_name">Hossam Mohsen</string>
     <string name="about_bio">Hossam Mohsen is a self-taught developer focused on software development in general. He is also specialized in back-end development and has worked on mobile and web apps. Hossam worked with many languages and platforms including: Android, Flutter, NodeJS, Java, Kotlin, and more.</string>
-    <string name="home">Home</string>
-    <string name="search">Search</string>
-    <string name="favourites">Favourites</string>
-    <string name="recipe_details">Recipe Details</string>
+    <string name="home">الرئيسية</string>
+    <string name="search">البحث</string>
+    <string name="favourites">المفضلة</string>
+    <string name="recipe_details">معلومات الوصفة</string>
+    <string name="search_meals">البحث عن وصفات</string>
+    <string name="start_typing">ابدأ الكتابة للحصول على الوصفات!</string>
+    <string name="no_meals">No meals found</string>
 </resources>
