--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -22,4 +22,8 @@
     <string name="search_meals">البحث عن وصفات</string>
     <string name="start_typing">ابدأ الكتابة للحصول على الوصفات!</string>
     <string name="no_meals">No meals found</string>
+    <string name="instructions">Instructions:</string>
+    <string name="read_less">Read less</string>
+    <string name="read_more">Read more</string>
+    <string name="view_video">View Video</string>
 </resources>
